# planning_scene_ros2

./: CMakeLists.txt  package.xml
src/: add_collision_object_service.cpp
srv/: AddCollisionObject.srv
